Add whitespace no-wrap (fix wrapping on small screens)

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     .container {
         border: solid 2px black;
         margin: 20px;
+        white-space: nowrap;
     }
     .bar {
         width: 20px;
